@@ -16,12 +16,14 @@
 
 	<install for="1.1, 1.1.0-1.1.99">
 		<modification format="xml" type="file">Sources.xml</modification>
+		<modification format="xml" type="file">Languages.xml</modification>
 		<require-file name="Subs-PrettyUrls.php" destination="$sourcedir" />
 		<require-file name="example.htaccess" destination="$boarddir" />
 		<code type="file">install.php</code>
 	</install>
 	<uninstall for="1.1, 1.1.0-1.1.99">
 		<modification format="xml" type="file" reverse="true">Sources.xml</modification>
+		<modification format="xml" type="file" reverse="true">Languages.xml</modification>
 		<remove-file name="$sourcedir/Subs-PrettyUrls.php" />
 		<remove-file name="$boarddir/example.htaccess" />
 	</uninstall>
